[tool.poetry]
name = "uniqpanel"
version = "1.0.0"
description = "Counts unique lines in files lol"
authors = ["Austin Pray <austin@austinpray.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.1.4"
dj-database-url = "^0.5.0"
psycopg2-binary = "^2.8.6"
django-redis = "^4.12.1"
chardet = "^4.0.0"
humanize = "^3.2.0"
gunicorn = "^20.0.4"
django-allow-cidr = "^0.3.1"

[tool.poetry.dev-dependencies]
pylint = "^2.6.0"
pytest = "^6.2.1"
autopep8 = "^1.5.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
